// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParserUtilsV2 findHeaders one header: bond 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "position": Position {
          "end": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "indent": Array [],
          "start": Object {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "type": "text",
        "value": "h1",
      },
    ],
    "depth": 1,
    "position": Position {
      "end": Object {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "indent": Array [],
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "heading",
  },
]
`;

exports[`ParserUtilsV2 findLinks empty link 1`] = `Array []`;

exports[`ParserUtilsV2 findLinks one link: bond 1`] = `
Array [
  Object {
    "alias": "bar",
    "from": Object {
      "fname": "foo",
      "id": "foo",
    },
    "original": "bar",
    "pos": Object {
      "end": 7,
      "start": 0,
    },
    "to": Object {
      "fname": "bar",
    },
    "type": "wiki",
    "value": "bar",
  },
]
`;

exports[`ParserUtilsV2 replaceLinks fenced code 1`] = `
"\`\`\`
[[bond]]
\`\`\`

"
`;

exports[`ParserUtilsV2 replaceLinks inline code 1`] = `
"\`[[bond]]\`

"
`;

exports[`ParserUtilsV2 replaceLinks multiple 1`] = `
"[[bar]]
[[bar]]

"
`;

exports[`ParserUtilsV2 replaceLinks one 1`] = `
"[[bar]]

"
`;

exports[`ParserUtilsV2 replaceLinks ref 1`] = `
"((ref: [[bar]]))

"
`;

exports[`ParserUtilsV2 replaceLinks with alias 1`] = `
"[[hero|bar]]

"
`;

exports[`ParserUtilsV2 replaceLinks with offset  1`] = `
"   [[bar]]

"
`;
